updateScoreShouldUpdateScoreForActiveGame - red